# GStreamerTest

./: CMakeLists.txt  bus_callback.cpp  bus_callback.h  handlergst.cpp  handlergst.h  ibuscallback.cpp  ibuscallback.h  main.cpp  player.cpp  player.h  playercontrolswidget.cpp  playercontrolswidget.h  screen.cpp  screen.h
